JVM初步完成